Cover canonical correction and multiword identifiers